deploy/gateway/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
